# coscli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT.md  PUBLICATION_SUMMARY.md  README.md  UI_README.md  diagnose_ssl.py  install.sh  pyproject.toml  ui_app.py
.github/workflows/: release.yml
cos/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  constants.py  exceptions.py  transfer.py  utils.py
cos/commands/: __init__.py  configure.py  cors.py  cp.py  lifecycle.py  ls.py  mb.py  mv.py  policy.py  presign.py  rb.py  rm.py  sync.py  token.py  versioning.py
cos/tools/: __init__.py  diagnose_ssl.py
docs/: COMPLETION_CERTIFICATE.md  COS_CLI_DEVELOPMENT_PLAN.md  CREDENTIAL_PRECEDENCE.md  CREDENTIAL_PRECEDENCE_FIX.md  FINAL_SUMMARY.md  GETBUCKET_PERMISSION_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_V2.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MASTER_CHECKLIST.md  MIGRATION_TO_UV.md  PRE_RELEASE_VERIFICATION.md  PROJECT_SUMMARY.md  PUBLICATION_CHECKLIST.md  PYPI_UPLOAD_GUIDE.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_1.1.0.md  RELEASE_NOTES_2.0.0.md  RELEASE_NOTES_v2.0.1.md  RELEASE_NOTES_v2.2.0.md  RELEASE_NOTES_v2.2.1.md  RELEASE_SUMMARY_v2.2.0.md  SECURITY_REVIEW.md  SSL_TROUBLESHOOTING.md  TOKEN_MANAGEMENT.md  TOKEN_USAGE_GUIDE.md  UV_ANNOUNCEMENT.md  UV_GUIDE.md  VERIFICATION_COMPLETE.md
docs/ui/: INDEX.md  MODULE_ORGANIZATION.md  PHASE1_CHECKLIST.md  PHASE1_COMPLETE.md  PHASE1_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  PHASE2_VISUAL_SUMMARY.md  QUICKREF.md  README_UI.md  REFACTORING_SUMMARY.md  REFACTORING_VISUAL.md  REQUIREMENTS.md  STATUS.md  SUMMARY.md  UI_COMPONENTS.md  UI_DESIGN.md  UI_MOCKUPS.md
tests/: README_TESTS.md  REFACTORING_SUMMARY.md  __init__.py  conftest.py  run_all_tests.py  test_advanced_features.py  test_commands.py  test_commands_simple.py  test_config.py  test_credential_precedence.py  test_integration.py  test_parallel_transfers.py  test_retry_and_resume.py  test_streaming_transfers.py  test_sync_flags.py  test_token.py  test_unit.py  test_utilities_v2.py  test_utils.py
tests/ui/: __init__.py  test_cos_client_wrapper.py  test_file_manager.py
ui/: README.md  app.py
ui/components/: __init__.py  action_buttons.py  file_display.py  progress.py  status_indicators.py  widgets.py
ui/pages/: buckets.py  file_manager.py  settings.py  transfers.py
ui/src/: config.py  cos_client_wrapper.py  file_operations.py  page_utils.py  utils.py
