[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tencent-cos-cli"
version = "2.2.1"
description = "Command line interface for Tencent Cloud Object Storage"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Shanshan Zhu", email = "sszhu.soft@gmail.com"}
]
keywords = ["tencent", "cos", "cloud", "storage", "cli", "object-storage"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]

dependencies = [
    "tencentcloud-sdk-python>=3.0.1000",
    "cos-python-sdk-v5>=1.9.30",
    "click>=8.1.0",
    "rich>=13.0.0",
    "configparser>=6.0.0",
    "tabulate>=0.9.0",
    "streamlit>=1.40.1",
    "pylint>=3.2.7",
    "pytest>=8.3.5",
    "pip>=25.0.1",
    "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/sszhu/coscli"
Documentation = "https://github.com/sszhu/coscli/blob/main/README.md"
Repository = "https://github.com/sszhu/coscli"
Issues = "https://github.com/sszhu/coscli/issues"
Changelog = "https://github.com/sszhu/coscli/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
cos = "cos.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
